# bittorrent-project

./: .gitignore
bittorrent/: meson.build
bittorrent/libs/mbtbe/: meson.build
bittorrent/libs/mbtbe/include/mbt/be/: torrent_impl.h
bittorrent/libs/mbtbe/include/mbt/utils/: str.h  view.h
bittorrent/libs/mbtbe/src/: mbtstr.c  torrent.c  torrent_files_getters.c  torrent_getters.c
bittorrent/libs/mbtfile/: meson.build
bittorrent/libs/mbtfile/include/mbt/file/: file_handler.h  piece.h
bittorrent/libs/mbtfile/src/: file_handler.c  piece.c
bittorrent/libs/mbtfile/tests/: test_mbtfile.c
bittorrent/libs/mbtutils/: meson.build
bittorrent/libs/mbtutils/src/: str.c  view.c
bittorrent/libs/mbtutils/tests/: test_mbtutils.c
